microserv-billing/src/main/java/org/example/microservbilling/error/exception/NotFoundIDException.java
package org.example.microservbilling.error.exception;

public class NotFoundIDException extends RuntimeException{
    public NotFoundIDException(String message) {
        super(message);
    }
}
